--- a/Project-phase1/Prototype-test/about.html
+++ b/Project-phase1/Prototype-test/about.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/Project-phase1/Prototype-test/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="/index.js"defer></script>
+    <script src="/Project-phase1/Prototype-test/index.js"defer></script>
     <title>Spanios</title>
 </head>
 <body>
         <div class="topnav" id="Topnav">
-        <svg onclick="location.href='/index.html' " class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
-            <a href="/index.html" onclick="document.getElementsByClassName()">Home</a>
-            <a href="/books.html">Books</a>
-            <a href="/contact.html">Contact</a>
-            <a href="/about.html" class="active">About</a>
+        <svg onclick="location.href='/Project-phase1/Prototype-test/index.html' " class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
+            <a href="/Project-phase1/Prototype-test/index.html" onclick="document.getElementsByClassName()">Home</a>
+            <a href="/Project-phase1/Prototype-test/books.html">Books</a>
+            <a href="/Project-phase1/Prototype-test/contact.html">Contact</a>
+            <a href="/Project-phase1/Prototype-test/about.html" class="active">About</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
             </a>
