--- a/Project-phase1/Rare Bookstore Prototype-test/profile.html
+++ b/Project-phase1/Rare Bookstore Prototype-test/profile.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="/Project-phase1/Prototype-test/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/Project-phase1/Prototype-test/index.js"defer></script>
-    <title>Spanios</title>
+    <title>Rare Bookstore Prototype</title>
 </head>
 <body>
     <!-- The Navigation menu bar -->
     <div class="topnav" id="Topnav">
     <svg onclick="location.href='/Project-phase1/Prototype-test/index.html' " class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
         <a href="/Project-phase1/Prototype-test/index.html" onclick="document.getElementsByClassName()">Home</a>
-        <a href="/Project-phase1/Prototype-test/books.html" >Books</a>
+        <a href="/Project-phase1/Prototype-test/addbooks.html" >Books</a>
         <a href="/Project-phase1/Prototype-test/contact.html">Contact</a>
         <a href="/Project-phase1/Prototype-test/about.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
