Let's do this again

--- a/Project-phase1/Rare Bookstore Prototype-test/index.html
+++ b/Project-phase1/Rare Bookstore Prototype-test/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Project-phase1/Rare Bookstore Prototype-test/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/Project-phase1/Rare Bookstore Prototype-test/index.js"defer></script>
-    <title>Spanios</title>
+    <title>Rare Bookstore</title>
 </head>
 <body>
     <!-- The Navigation menu bar -->
