--- a/Project-phase1/Rare Bookstore Prototype-test/profile.html
+++ b/Project-phase1/Rare Bookstore Prototype-test/profile.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Project-phase1/Prototype-test/style.css">
+    <link rel="stylesheet" href="/Project-phase1/Rare Bookstore Prototype-test/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="/Project-phase1/Prototype-test/index.js"defer></script>
-    <title>Rare Bookstore Prototype</title>
+    <script src="/Project-phase1/Rare Bookstore Prototype-test/index.js"defer></script>
+    <title>Rare Bookstore</title>
 </head>
 <body>
     <!-- The Navigation menu bar -->
     <div class="topnav" id="Topnav">
-    <svg onclick="location.href='/Project-phase1/Prototype-test/index.html' " class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
-        <a href="/Project-phase1/Prototype-test/index.html" onclick="document.getElementsByClassName()">Home</a>
-        <a href="/Project-phase1/Prototype-test/addbooks.html" >Books</a>
-        <a href="/Project-phase1/Prototype-test/contact.html">Contact</a>
-        <a href="/Project-phase1/Prototype-test/about.html">About</a>
+    <svg onclick="location.href='/Project-phase1/Rare Bookstore Prototype-test/index.html' " class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
+        <a href="/Project-phase1/Rare Bookstore Prototype-test/index.html" onclick="document.getElementsByClassName()">Home</a>
+        <a href="/Project-phase1/Rare Bookstore Prototype-test/addbooks.html" >Books</a>
+        <a href="/Project-phase1/Rare Bookstore Prototype-test/contact.html">Contact</a>
+        <a href="/Project-phase1/Rare Bookstore Prototype-test/about.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
         </a>
     </div>
 
     <div class="Profile-box">
-        <img class="prof-img" src="/Project-phase1/Prototype-test/images/pexels-tima-miroshnichenko-6550464.jpg" alt="man with glasses standing inside of a book store">
+        <img class="prof-img" src="/Project-phase1/Rare Bookstore Prototype-test/images/pexels-tima-miroshnichenko-6550464.jpg" alt="man with glasses standing inside of a book store">
         <div class="demo">
             <span>Anthony Miller</span><br>
             <span>Store Associate</span><br>
