--- a/Project-phase1/Rare Bookstore Prototype-test/index.html
+++ b/Project-phase1/Rare Bookstore Prototype-test/index.html
@@ -25,7 +25,7 @@
       <div class="items">
           <h1><b>Lorem</b> ipsum, dolor sit amet consectetur</h1>
           <h3>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</h3>
-          <button onclick="location.href='/Project-phase1/Rare Bookstore Prototype-test/index.html' " class="btn" type="button">SIgn up</button>
+          <button onclick="location.href='/Project-phase1/Rare Bookstore Prototype-test/signup.html' " class="btn" type="button">SIgn up</button>
       </div>
       <div class="items" id="photo">
         <img src="/Project-phase1/Rare Bookstore Prototype-test/images/Illustration.png" alt="An illustration of a woman sititng and reading">
