--- a/Project-phase1/Rare Bookstore Prototype-test/signup.html
+++ b/Project-phase1/Rare Bookstore Prototype-test/signup.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Rare Bookstore Prototype-test/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="/Rare Bookstore Prototype-test/index.js"defer></script>
+    <script src="./index.js"defer></script>
     <title>Rare Bookstore</title>
 </head>
 <div>
     <!-- The Navigation menu bar -->
     <div class="topnav" id="Topnav">
-        <svg onclick="location.href='/Rare Bookstore Prototype-test/index.html' " class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
-        <a href="/Rare Bookstore Prototype-test/index.html">Home</a>
-        <a href="/Rare Bookstore Prototype-test/addbooks.html">Books</a>
-        <a href="/Rare Bookstore Prototype-test/contact.html">Contact</a>
-        <a href="/Rare Bookstore Prototype-test/about.html">About</a>
+        <svg onclick="location.href='./index.html' " class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
+        <a href="./index.html">Home</a>
+        <a href="./addbooks.html">Books</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./about.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
         </a>
@@ -40,7 +40,7 @@
             <label for="passwords" name="password">Password</label>
             <input type="password" id="pswd" aria-required="true">
 
-            <input type="submit" value="Sign up" onclick="store()">
+            <input type="submit" value="Sign up">
         </form>
     </div>
 </body>
