needed to delete the stray index file.

--- a/Project-phase2/Booklist.html
+++ b/Project-phase2/Booklist.html
@@ -28,14 +28,117 @@
             <button id="searchBtn">submit</button>
         </form>
     </div>
+    <!--This is the container for the title-->
+
     <!--This is a book menu for the genre catagory types.-->
-    <div class="fContainer">
-        <ul class="bookMenu">
-            <li class="genreList"><a class="links" href="#">Comedy</a></li>
-            <li class="genreList"><a class="links" href="#">Horror</a></li>
-            <li class="genreList"><a class="links" href="#">Romance</a></li>
-            <li class="genreList"><a class="links" href="#">Drama</a></li>
-        </ul>
+    <div class="flexbox">
+        <div class="fboxitem">
+            <img id="nPhotos" class="Roger"  src="https://cdn.pixabay.com/photo/2016/11/21/12/42/beard-1845166_960_720.jpg" alt="picture of man with beard staring">
+            <br>
+            <label class="names " for="img-photo1-1">Roger</label>
+       </div>
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Lisa nPhotos" src="https://cdn.pixabay.com/photo/2016/11/29/03/35/girl-1867092_960_720.jpg" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-2">Lisa</label>
+       </div>
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Antonia" src="https://cdn.pixabay.com/photo/2016/06/06/17/05/woman-1439909_960_720.jpg" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-3">Antonia</label>
+       </div>
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Leslie" src="https://cdn.pixabay.com/photo/2020/03/03/16/54/female-4899179_960_720.jpg" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-4">Leslie</label>
+       </div>      
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Sheyraya" src="https://cdn.pixabay.com/photo/2017/04/01/21/06/portrait-2194457_960_720.jpg" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-5">Sheyraya</label>
+       </div>        
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Brian" src="https://cdn.pixabay.com/photo/2015/08/05/04/25/people-875617_960_720.jpg" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-6">Brian</label>
+       </div>                      
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Anthony" src="https://cdn.pixabay.com/photo/2017/11/02/14/36/model-2911363_960_720.jpg" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-7">Anthony</label>
+       </div>     
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Bonnie" src="https://images.pexels.com/photos/712513/pexels-photo-712513.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-8">Bonnie</label>
+       </div>                      
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Joseph" src="https://images.pexels.com/photos/1813922/pexels-photo-1813922.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-9">Joseph</label>
+       </div>     
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Hamilton" src="https://images.pexels.com/photos/1808993/pexels-photo-1808993.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-10">Hamilton</label>
+       </div>  
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Patrick" src="https://images.pexels.com/photos/5543340/pexels-photo-5543340.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-11">Patrick</label>
+       </div>                      
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Monica" src="https://images.pexels.com/photos/6599491/pexels-photo-6599491.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-12">Monica</label>
+       </div>                      
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Cassie" src="https://images.pexels.com/photos/2709388/pexels-photo-2709388.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-13">Cassie</label>
+       </div>                     
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Chloe" src="https://images.pexels.com/photos/1808785/pexels-photo-1808785.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-14">Chloe</label>
+       </div>                      
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Kumar" src="https://images.pexels.com/photos/2379005/pexels-photo-2379005.jpeg?cs=srgb&dl=pexels-italo-melo-2379005.jpg&fm=jpg" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-15">Kumar</label>
+       </div> 
+
+       <div class="fboxitem">
+            <img id="nPhotos" class="Cassie" src="https://images.pexels.com/photos/2709388/pexels-photo-2709388.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-16">Cassie</label>
+        </div>                     
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Chloe" src="https://images.pexels.com/photos/1808785/pexels-photo-1808785.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-17">Chloe</label>
+        </div>                      
+
+        <div class="fboxitem">
+            <img id="nPhotos" class="Kumar" src="https://images.pexels.com/photos/2379005/pexels-photo-2379005.jpeg?cs=srgb&dl=pexels-italo-melo-2379005.jpg&fm=jpg" alt="picture of man with beard staring">
+            <br>
+            <label class="names" for="img-photo1-18">Kumar</label>
+        </div>                                           
     </div>
 </body>
 </html>
