--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=https://marvista8.github.io/techbridge-fewd-winter2022/Project-phase1/Rare Bookstore Prototype-test/index.html">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://marvista8.github.io/techbridge-fewd-winter2022/style.css>
     <link rel="stylesheet" href="index.js">
     <title>Dummy file</title>
 </head>
