This is just cleaning up the styles on all the pages.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="topnav" id="Topnav">
     <svg onclick="location.href='./index.html' " class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
         <a href="/Project-phase1/Rare Bookstore Prototype-test/index.html" class="active" onclick="document.getElementsByClassName()">Home</a>
-        <a href="./addbooks.html" >Books</a>
-        <a href="./contact.html">Contact</a>
-        <a href="./about.html">About</a>
+        <a href="addbooks.html" >Books</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
         </a>
@@ -28,7 +28,7 @@
           <button onclick="location.href='./signup.html' " class="btn" type="button">SIgn up</button>
       </div>
       <div class="items" id="photo">
-        <img src="./images/Illustration@2x.png" alt="An illustration of a woman sititng and reading">
+        <img src="/src/images/Illustration.png" alt="An illustration of a woman sititng and reading">
       </div>
   </div>
   
