--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <button onclick="location.href='./signup.html' " class="btn" type="button">SIgn up</button>
       </div>
       <div class="items" id="photo">
-        <img src="/src/images/Illustration.png" alt="An illustration of a woman sititng and reading">
+        <img src="src/images/Illustration.png" alt="An illustration of a woman sititng and reading">
       </div>
   </div>
   
