--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
 <body>
     <!-- The Navigation menu bar -->
     <div class="topnav" id="Topnav">
-    <svg onclick="location.href='./index.html' " class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
+    <svg onclick="myHome()" class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
         <a href="./index.html" onclick="document.getElementsByClassName()">Home</a>
         <a href="./addbooks.html" >Books</a>
         <a href="./contact.html">Contact</a>
