just adding a little stuff nothing major.

--- a/Booklist.html
+++ b/Booklist.html
@@ -13,8 +13,8 @@
     <!-- The Navigation menu bar -->
     <div class="topnav" id="Topnav">
     <svg onclick="myHome()" class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
-        <a href="index.html" class="active" onclick="document.getElementsByClassName()">Home</a>
-        <a href="addbooks.html" >Books</a>
+        <a href="index.html" class="active" onclick="">Home</a>
+        <a href="Booklist.html" >Books</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -35,13 +35,20 @@
         <div class="fboxitem">
             <img id="nPhotos" class="Roger"  src="https://cdn.pixabay.com/photo/2016/11/21/12/42/beard-1845166_960_720.jpg" alt="picture of man with beard staring">
             <br>
-            <label class="names " for="img-photo1-1">Roger</label>
+            <label class="names " for="img-photo1-1">Title: </label><br>
+            <label class="names " for="img-photo1-1">Author: </label><br>
+            <label class="names " for="img-photo1-1">Genre: Fiction</label><br>
+            <label class="names " for="img-photo1-1">Price: $39.99</label>
        </div>
 
         <div class="fboxitem">
             <img id="nPhotos" class="Lisa nPhotos" src="https://cdn.pixabay.com/photo/2016/11/29/03/35/girl-1867092_960_720.jpg" alt="picture of man with beard staring">
             <br>
             <label class="names" for="img-photo1-2">Lisa</label>
+            <label class="names " for="img-photo1-1">Title: </label><br>
+            <label class="names " for="img-photo1-1">Author: </label><br>
+            <label class="names " for="img-photo1-1">Genre: Fiction</label><br>
+            <label class="names " for="img-photo1-1">Price: $39.99</label>
        </div>
 
         <div class="fboxitem">
