--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <div class="topnav" id="Topnav">
         <svg onclick="myHome()" class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
             <a href="index.html" onclick="">Home</a>
-            <a href="Booklist.html">Books</a>
+            <a href="booklist.html">Books</a>
             <a href="contact.html" class="active">Contact</a>
             <a href="about.html">About</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
