--- a/index.html
+++ b/index.html
@@ -4,33 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://use.typekit.net/esg5vch.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="index.js"defer></script>
-    <title>Rare Bookstore</title>
+    <title>Spanios</title>
 </head>
 <body>
     <!-- The Navigation menu bar -->
-    <div class="topnav" id="Topnav">
-    <svg onclick="myHome()" class="logo" xmlns="http://www.w3.org/2000/svg" width="71" height="45" viewBox="0 0 71 45"><defs><style>.a{fill:#fff;stroke:rgba(0,0,0,0);font-size:32px;font-family:SegoeUI-Bold, Segoe UI;font-weight:700;}</style></defs><text class="a" transform="translate(1 36)"><tspan x="0" y="0">logo</tspan></text></svg>
-        <a href="index.html" class="active" onclick="myHome()">Home</a>
-        <a href="Booklist.html" >Books</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-        </a>
     </div>
-  <div class="flex">
-      <div class="items">
-          <h1><b>Lorem</b> ipsum, dolor sit amet consectetur</h1>
-          <h3>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit</h3>
-          <button onclick="location.href='./signup.html' " class="btn" type="button">SIgn up</button>
-      </div>
-      <div class="items" id="photo">
-        <img src="src/images/Illustration.png" alt="An illustration of a woman sititng and reading">
-      </div>
-  </div>
-  
+    <section class="showcase">
+        <div class="video-container">
+            <video src="src/images/production ID_4873467.mp4" autoplay muted loop></video>
+        </div>
+        <div class="content">
+            <h1 class="Display-text">Find Your Story</h1>
+            <h3 class="Subhead">Antique Books From All Over The World Waiting To Be Explored</h3>
+            <a class="link-btn" onclick="mainPage() " href="#about" class="btn">Find Out</a>
+        </div>
+    </section>
 </body>
 </html>
